--- a/about app.html
+++ b/about app.html
@@ -85,7 +85,7 @@
     <div class="container">
         <div class="about-section">
             <h1>حول تطبيق كالستنكس المستوى التحضيري</h1>
-            <p>رفيقك المثالي لتدريبات وزن الجسم والتقدم في تمارين الجمباز.</p>
+            <p>هو مرحلة تأسيسية مُصممة لبناء الأساسات الجسدية والعقلية الضرورية لممارسة تمارين الكالستنكس المتقدمة بأمان وفعالية. يُركز هذا البرنامج على تطوير القوة الوظيفية، والمرونة، والتوازن، والتحكم في الجسم، مع تعزيز الوعي الحسي الحركي (Body Awareness) الذي يُعد حجر الزاوية لأي تقدم في هذا المجال.</p>
             
             <div class="features-grid">
                 <div class="feature-card">
